--- a/style/blog.css
+++ b/style/blog.css
@@ -318,6 +318,92 @@ nav ul a {
 #see-more-btn {
   margin-top: 32px;
 }
+/* video demo section work done */
+/* news section work start */
+.news-later {
+  display: flex;
+  margin-left: 19%;
+  margin-right: 19%;
+  margin-top: 100px;
+  gap: 24px;
+}
+.news-later-details {
+  border-radius: 16px;
+  border: 1px solid #ff5400;
+}
+.news-title {
+  color: #131318;
+  font-size: 24px;
+  font-weight: 800;
+}
+.news-description {
+  color: #5a5a5d;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  padding-top: 16px;
+}
+.sub-news {
+  margin: 40px;
+}
+.namebox-news {
+  margin-top: 24px;
+}
+.namebox-news input {
+  color: rgba(19, 19, 24, 0.3);
+  font-family: Mulish;
+  font-size: 16px;
+  font-weight: 400;
+  height: 52px;
+  border-radius: 8px;
+  background: rgba(19, 19, 24, 0.05);
+  border: 0;
+  width: 100%;
+}
+#email-news {
+  margin-top: 16px;
+}
+.btn-subscribe {
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 800;
+  margin-top: 24px;
+  width: 100%;
+  padding: 14px 0;
+  border-radius: 8px;
+  background: #ff5400;
+  border: 0;
+}
+.news-pic img {
+  width: 96%;
+  height: 100%;
+}
+.save-up {
+  border-radius: 16px;
+  background: #ff5400;
+  border: 0;
+  width: 325px;
+  height: 120px;
+  transform: rotate(-19.628deg);
+  position: relative;
+  bottom: 175px;
+  left: 1180px;
+}
+.save-up-description {
+  color: #fff;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 400;
+  padding-top: 26px;
+}
+.save-up-title {
+  color: #fff;
+  text-align: center;
+  font-family: Mulish;
+  font-size: 32px;
+  font-weight: 800;
+}
 @media screen and (max-width: 576px) {
   .nav,
   .l-nav,
@@ -440,14 +526,14 @@ nav ul a {
     margin: 0;
     max-width: 380px;
   }
-  .video-container li{
+  .video-container li {
     margin-left: 20px;
   }
   .video IMG {
     width: 90%;
     margin-left: 15px;
   }
-  .video-details{
+  .video-details {
     margin: 0 20px;
   }
   .video-title {
