--- a/style/blog.css
+++ b/style/blog.css
@@ -400,9 +400,54 @@ nav ul a {
 .save-up-title {
   color: #fff;
   text-align: center;
-  font-family: Mulish;
   font-size: 32px;
   font-weight: 800;
+}
+/* news later work done */
+/* footer work start */
+footer {
+  background: rgba(19, 19, 24, 0.05);
+  width: 100%;
+  height: 502px;
+  text-align: center;
+}
+.footer-first-part {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  justify-content: center;
+  padding-top: 110px;
+}
+.footer-title {
+  color: var(--Dark-01, #131318);
+  font-size: 32px;
+  font-weight: 800;
+}
+.part2-of-title-footer {
+  color: #ff5400;
+}
+.footer-description {
+  color: #5a5a5d;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  margin-top: 15px;
+  margin-bottom: 33px;
+}
+.father-of-line {
+  display: flex;
+  justify-content: center;
+}
+.line {
+  margin-top: 50px;
+  border: 1px solid rgba(19, 19, 24, 0.1);
+  width: 872px;
+  margin-bottom: 50px;
+}
+.description-of-copyright {
+  color: #131318;
+  font-size: 16px;
+  font-weight: 300;
 }
 @media screen and (max-width: 576px) {
   .nav,
@@ -414,7 +459,8 @@ nav ul a {
   .second,
   .third,
   .why-container,
-  .video-container {
+  .video-container,
+  .news-later {
     flex-direction: column;
     padding-top: 10px;
     gap: 10px;
@@ -543,5 +589,52 @@ nav ul a {
     line-height: 30px;
     margin-top: 24px;
     margin-bottom: 16px;
+  }
+  .save-up {
+    border-radius: 10.569px;
+    background: #ff5400;
+    border: 0;
+    width: 214px;
+    height: 80px;
+    transform: rotate(-19.628deg);
+    position: relative;
+    bottom: 120px;
+    left: 130px;
+  }
+  .save-up-description {
+    color: #fff;
+    text-align: center;
+    font-size: 15.854px;
+    font-weight: 400;
+    padding-top: 6px;
+  }
+  .save-up-title {
+    color: #fff;
+    text-align: center;
+    font-size: 21.138px;
+    font-weight: 800;
+  }
+  .news-later {
+    margin-top: 24px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .news-pic IMG {
+    width: 100%;
+  }
+  .footer-first-part{
+    padding-top: 33.2px;
+  }
+  .footer-description{
+    margin: 16px 44px;
+  }
+  .line{
+    max-width: 335px;
+    margin-top: 24px;
+    margin-bottom: 24px;
+  }
+  footer{
+    height: 370px;
+    margin-top: -65px;
   }
 }
